# xirvik-tools

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .readthedocs.yaml  .style.yapf  .travis.yml  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  SECURITY.md  build_docs.py  gen-docs.sh  mypy.ini  package.json  paramiko-pr-578.patch  pyproject.toml  setup.py  sh.tat.xirvik-tools.yml  snapcraft.yaml  xirvik-chrome-ext-background.js  xirvik-tools.kdev4  xirvik.1
.claude/: settings.local.json.dist
.claude/agents/: click-auditor.md  copy-editor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  qa-fixer.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.github/: dependabot.yml
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  flatpak.yml  lint-python.yml  prettier.yml  publish.yml  pyinstaller.yml  python-publish.yml  qa.yml  release.yml  snap.yml  spelling.yml  test-python.yml  tests.yml
.stubs/: argcomplete.pyi  requests_mock.pyi  unidecode.pyi  xdg.pyi  yaml.pyi
.stubs/urllib3/: util.pyi
LaunchAgents/: README.md  sh.tat.XirvikStartTorrents.plist
doc/: NOTES.txt  conf.py  index.rst
docs/: NOTES.md  badges.rst  commands.rst  conf.py  index.rst  library.rst
examples/: move-by-label.py
man/: xirvik-tools.1  xirvik.1
systemd/: README.md  xirvik-start-torrents.service  xirvik-start-torrents.timer
test/: conftest.py  test_client.py
test/commands/: test_completion.py  test_config_file_command.py  test_delete_old.py  test_move_by_label.py  test_move_erroneous.py  test_simple.py
tests/: conftest.py  pyproject.toml  test_client.py  test_main.py
tests/commands/: test_completion.py  test_config_file_command.py  test_delete_old.py  test_install_services.py  test_move_by_label.py  test_move_erroneous.py  test_simple.py
xirvik/: __init__.py  __main__.py  client.py  commands.py  conftest.py  log.py  logging.py  main.py  mirror.py  sftp.py  typing.py  util.py  utils.py
xirvik/client/: __init__.py
xirvik/commands/: __init__.py  delete_old.py  install_services.py  move_by_label.py  move_erroneous.py  root.py  simple.py  util.py  utils.py
xirvik/commands/tests/: test_completion.py  test_config_file_command.py  test_delete_old.py  test_move_by_label.py  test_move_erroneous.py  test_simple.py
xirvik/test/: __init__.py  test_client.py  test_util.py
