[tool.poetry]
authors = ["Fa An <2998784916@qq.com>"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
description = "Command line utilities for interfacing with Xirvik."
documentation = "https://xirvik-tools.readthedocs.io/"
homepage = "https://github.com/Tatsh/xirvik-tools"
include = ["LaunchAgents", "systemd"]
keywords = ["command line", "utilities", "xirvik"]
license = "MIT"
name = "xirvik-tools"
packages = [{ include = "xirvik" }]
readme = "README.md"
version = "0.4.1"

[tool.poetry.dependencies]
python = "^3.10"
unidecode = "^1.3.6"
beautifulsoup4 = "^4.12.1"
cached-property = "^1.5.2"
click = "^8.1.3"
html5lib = "^1.1"
loguru = "^0.7.0"
pyyaml = "^6.0"
requests = "^2.31.0"
tabulate = "^0.9.0"
urllib3 = "^2.0.3"
pyxdg = "^0.28"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
rope = "^1.8.0"
toml = "^0.10.2"
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.1"
types-tabulate = "^0.9.0.2"
yapf = "^0.40.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[tool.poetry.group.testing.dependencies]
mock = "^5.0.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xirvik = "xirvik.commands:xirvik"
